#
# some news ... see also TODO for hints
#


2021-06-02 -> ## amtrack stuff
              fix values[] handling

2021-06-01 -> ## amtrack stuff
              add next parts for display handling

2021-05-31 -> ## sensor_pi && amtrack stuff
              add first parts for fifo handling

2021-05-29 -> ## sensor_pi stuff
              add first parts for client fifo thread handling

2021-05-28 -> ## sensor_pi stuff
              add more first test content
              new requirement -> i2c-tools and i2c-tools-devel are needed
	      add first parts of client fifo handling

              ## lcd2004_i2c stuff
	      new requirement -> i2c-tools and i2c-tools-devel are needed

              ## amtrack stuff
	      new requirement -> i2c-tools and i2c-tools-devel are needed

              ## libhelper stuff
	      new requirement -> i2c-tools and i2c-tools-devel are needed

	      ## target stuff
	      update kernel to 5.10.x
	      regular rootfs updates

	      ## repo stuff
	      rename kernel build howtos
	      some documentation adds/changes/fixes/improvements

2021-05-27 -> ## sensor_pi stuff
	      add first content to read out the values

2021-05-26 -> ## lcd2004_i2c stuff
	      fix position handling@display

	      ## amtrack stuff
	      some improvements for the functional testing

	      ## sensor_pi stuff
	      add kdo arguments

	      ## repo stuff
	      add runit script changes

2021-05-25 -> ## libhelper stuff
	      fix signed/unsigned bug in request struct

2021-05-24 -> ## repo stuff
	      change cmd handling via fifo

2021-05-22 -> ## repo stuff
	      add __DEBUG__ tag

	      ## lcd2004_i2c stuff
              add lcd_write_cmd fuction

2021-05-20 -> ## amtrack stuff
	      some improvements for the functional testing

              ## lcd2004_i2c stuff
	      some improvements for the functional testing

2021-05-19 -> ## amtrack stuff
              add first tests
	      add LCD size via kd argument

              ## lcd2004_i2c stuff