@@ -133,6 +133,7 @@ typedef	void sigfunc(int);
 sigfunc * my_signal(int signo, sigfunc *func);
 
 char * alloc_string(const char *s);
+char * alloc_string_2(size_t len);
 int become_daemon(const char* name);
 int set_cloexec(int fd);
 int lock_file(int fd);
